- Moved several functions, which try to build/re-produce SQL statements   from XLOG records, into xlogdump_statement.c.

--- a/xlogdump/Makefile
+++ b/xlogdump/Makefile
@@ -1,7 +1,7 @@
 # $PostgreSQL: pgsql/contrib/pgbench/Makefile,v 1.14 2005/09/27 17:13:08 tgl Exp $
 
 PROGRAM = xlogdump
-OBJS    = xlogdump.o xlogdump_oid2name.o $(top_builddir)/src/port/sprompt.o $(top_builddir)/src/backend/utils/hash/pg_crc.o
+OBJS    = xlogdump.o xlogdump_statement.o xlogdump_oid2name.o $(top_builddir)/src/port/sprompt.o $(top_builddir)/src/backend/utils/hash/pg_crc.o
 
 PG_CPPFLAGS = -I$(libpq_srcdir)
 PG_LIBS = $(libpq_pgport)
