- Fixed `top_builddir' in Makefile to fit contrib directory.
- Added `9.1rc1' to the test targets.

- Fixed a version string for the dev branch.

--- a/xlogdump/Makefile
+++ b/xlogdump/Makefile
@@ -13,7 +13,7 @@ PGXS := $(shell pg_config --pgxs)
 include $(PGXS)
 else
 subdir = contrib/xlogdump
-top_builddir = /home/snaga/pgsql/postgresql-9.0.1
+top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
 endif
